Added @mui/material ui framework and supporting libraries

--- a/public/index.css
+++ b/public/index.css
@@ -6,10 +6,14 @@
     -webkit-text-size-adjust: 100%;
 }
 
+html {
+    background-color: rgba(160, 169, 200, 0.05);
+}
+
 html, body, #root {
     min-height: 100vh;
     min-width: 100vw;
-    background-color: rgba(160, 169, 200, 0.05);
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
                  Helvetica Neue, sans-serif;
 }
+
