--- a/public/index.css
+++ b/public/index.css
@@ -6,21 +6,8 @@
   -webkit-text-size-adjust: 100%;
 }
 
-html {
-  background-color: rgba(160, 169, 200, 0.05);
-}
-
-html,
-body,
-#root {
-  box-sizing: border-box;
+:root, body, #root {
   min-height: 100vh;
-  min-width: 100vh;
-  padding: 0 2px;
-  font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,
-    Helvetica Neue, sans-serif;
-}
-
-.isActive {
-  background-color: "#d199ff"
+  min-width: 100vw;
+  font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans;
 }
