--- a/public/index.css
+++ b/public/index.css
@@ -7,8 +7,12 @@
 }
 
 html, body, #root {
-  min-height: 100vh;
-  min-width: 100vw;
+  max-width: 1920px;
+  max-height: 1080px;
+  width: 100%;
+  height: 100%;
+  /* min-height: 100vh; */
+  /* min-width: 100vw; */
   font-size: 1rem;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans;
 }
