--- a/public/index.css
+++ b/public/index.css
@@ -63,8 +63,9 @@ html, body, #root {
   --background: hsl(var(--base-grey), 96%);
   --background-contrast: hsl(var(--base-primary), 98%);
   --card-basic-color: white;
-  /* --card-basic-shadow: 0 0 0.1rem rgba(0, 0, 0, 0.3); /\*black with 30% opacity*\/ */
-  --card-basic-shadow: 0 0 0.1rem 0.1rem var(--grey-2);
+  --card-basic-shadow: 0 0 0.1rem rgba(0, 0, 0, 0.3); /*black with 30% opacity*/
+  --card-basic-shadow-2: 0 0 0.2rem rgba(0, 0, 0, 0.3);
+  --card-basic-shadow-3: 0 0 0.3rem white;
   --card-hover-basic-shadow: 0 0 0.3rem 0.2rem var(--primary-strong);
   --input-basic-border-box: 0 0 0.3rem rgba(0,0,0,0.3);
   --text: hsl(var(--base-black), 13%);
