--- a/src/components/selects/selects.css
+++ b/src/components/selects/selects.css
@@ -1,53 +1,31 @@
-select {
-  appearance: none;
+.combobox {
+  width: 100px;
+  height: 50px;
+  border: 5px solid black;
+}
+
+.combobox:focus-within {
+  background-color: yellow;
 }
 
 label {
-  appearance: none;
-}
-
-option {
-  appearance: none;
-}
-
-optgroup {
-  appearance: none;
-}
-
-.combobox-trigger {
-  width: 100px;
-  height: 55px;
-  display: block;
-  box-sizing: border-box;
+  pointer-events: none;
 }
 
 input {
   width: 100%;
   height: 100%;
+  display: block;
+  pointer-events: none;
 }
 
-input:focus {
-  border-color: red;
-}
-button {
-  padding: 20px;
-  border: 5px solid black;
-}
-
-.combobox-trigger:focus {
-  border-color: red;
-}
-
-ul {
+.combobox-list {
   background-color: green;
-  font-size: 2rem;
 }
 
-
-li:hover {
-  color: red;
+.combobox-option {
 }
 
-li:focus {
+.combobox-option.active {
   background-color: yellow;
 }
