--- a/public/index.css
+++ b/public/index.css
@@ -6,13 +6,9 @@
   -webkit-text-size-adjust: 100%;
 }
 
-html, body, #root {
-  max-width: 1920px;
-  max-height: 1080px;
+html, body, :root, #root {
   width: 100%;
   height: 100%;
-  /* min-height: 100vh; */
-  /* min-width: 100vw; */
   font-size: 1rem;
   font-family: Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans;
 }
@@ -95,13 +91,6 @@ html, body, #root {
   --text-xxl: calc(var(--text-xl) * var(--text-ratio));
   --text-xxxl: calc(var(--text-xxl) * var(--text-ratio));
 }
-
-[data-theme='dark'] {
-  --background: hsl(var(--base-grey), 15%);
-  --background-contrast: hsl(var(--base-grey), 30%);
-  --text: hsl(var(--base-primary), 95%);
-}
-
 
 .ripple {
   position: absolute;
