--- a/public/index.css
+++ b/public/index.css
@@ -105,6 +105,9 @@ body {
   --text-on-dark-basic: white;
   --text-on-dark-accent: var(--primary-subtle);
   --text-on-white: hsl(var(--base-black), 5%);
+  --panel-shadow: 5px -5px 50px rgba(0, 0, 0, 0.1), -1px 1px 50px rgba(0, 0, 0, 0.1);
+  --panel-color: white;
+
 
   --btn-primary-color: linear-gradient(to right,
                                        var(--secondary-strong) 0%,
