--- a/public/index.css
+++ b/public/index.css
@@ -107,6 +107,7 @@ body {
   --text-on-white: hsl(var(--base-black), 5%);
   --panel-shadow: 5px -5px 50px rgba(0, 0, 0, 0.1), -1px 1px 50px rgba(0, 0, 0, 0.1);
   --panel-color: white;
+  --modal-backdrop-1: hsl(240, 64%, 80%);
 
 
   --btn-primary-color: linear-gradient(to right,
