--- a/public/index.css
+++ b/public/index.css
@@ -21,6 +21,8 @@ body {
 #app-root {
   width: 1920px;
   height: 1080px;
+  max-width: 1920px;
+  max-height: 1080px;
   min-width: 1366px;
   min-height: 768px;
   max-width: 100vw;
